--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "mongodb": "^3.3.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "moment": "^2.24.0"
   },
   "engines": {
     "node": "6.9.1"
